Add front-end interview study plan metadata

--- a/src/content/blog/fe/2025年前端面试学习路线.md
+++ b/src/content/blog/fe/2025年前端面试学习路线.md
@@ -1,4 +1,9 @@
-# 2025 年前端面试学习路线：各阶段精细化安排
+---
+title: 2025 年前端面试学习路线：各阶段精细化安排
+pubDate: 2025-07-02
+description: 往死里学!
+tag: [front-end, 前端, 面试, js, ts, webpack, 设计模式]
+---
 
 以下针对 **五大阶段**，给出 **八周（56 天）** 的每日与周度细化计划，确保学习与演练兼顾，帮助高效掌握面试高频考点。
 
