Update title for front-end interview resources post to include the year 2025

--- a/src/content/blog/fe/2025-前端面试学习资源.mdx
+++ b/src/content/blog/fe/2025-前端面试学习资源.mdx
@@ -1,5 +1,5 @@
 ---
-title: 前端面试学习资源
+title: 2025 前端面试学习资源
 pubDate: 2025-07-02
 description: 前端面试学习资源收集
 tags: [front-end, 前端, 面试, js, ts, webpack, 设计模式]
